# spade-forestscanner

./: .gitignore  .gitmodules  Dockerfile  README.md  docker_build.sh  docker_connect.sh  docker_run.sh  docker_stop.sh  record_start.sh  record_stop.sh  start.sh
cad/: lidar-bracket-30deg.stl
cad/DXF/: 07-6001.dxf  07-6002.dxf  07-6003.dxf  07-6004.dxf
cad/STL/: 07-9002.stl  07-9004.stl  drone_leg v5.stl  prop_guard.stl
docker/: bashrc.txt  entrypoint.sh  init_docker.sh
docs/: DroneSetup.md
jetson-setup/: README.md  post-install.sh  setup-network.service.txt
ros1_ws/src/livox_to_pointcloud2/: package.xml
ros1_ws/src/livox_to_pointcloud2/include/livox_to_pointcloud2/: livox_converter.hpp
ros1_ws/src/livox_to_pointcloud2/src/: livox_to_pointcloud2_ros1.cpp
ros1_ws/src/spade/: CMakeLists.txt  package.xml
ros1_ws/src/spade/config/: MID360_config.json
ros1_ws/src/spade/launch/: msg_MID360.launch  record.launch  record.sh
ros1_ws/src/spade/scripts/: build_livox.sh
rosbags/: ReadMe.md
rosbags/logs/: ReadMe.md
scripts/: docker_build.sh  docker_connect.sh  docker_install.sh  docker_run.sh  docker_stop.sh  init.sh  install_network_setup_service.sh  raspi_setup.sh  record_start.sh  record_stop.sh  remote_bloat_software.sh  setup_docker_at_startup.sh  setup_network.sh  setup_remote_desktop.sh
scripts_host/: record.sh
setup/: setup-network.service.txt
