<?xml version="1.0"?>
<package format="2">
  <name>spade</name>
  <version>0.0.1</version>
  <description>The spade package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="steffan.lloyd@nibio.no">Steffan Lloyd</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <depend>roscpp</depend>
  <depend>fast_lio</depend>
  <depend>livox_ros_driver2</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
